--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.10.0",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vite": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -26,7 +27,7 @@
     "postcss": "^8.5.6",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.0.0",
+    
     "vite-plugin-vue-devtools": "^7.7.7"
   }
 }
