--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "vite": "^7.0.4",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1",
-    "vite": "^7.0.0"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -27,7 +27,6 @@
     "postcss": "^8.5.6",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.17",
-    
     "vite-plugin-vue-devtools": "^7.7.7"
   }
 }
