--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-  "axios": "^1.7.2",
-  "vue": "^3.4.29",
-  "vue-router": "^4.3.3",
-  "vite": "^5.3.1"
-},
-"devDependencies": {
-  "@vitejs/plugin-vue": "^5.0.5",
-  "autoprefixer": "^10.4.19",
-  "postcss": "^8.4.38",
-  "tailwindcss": "^3.4.4"
-}
+    "axios": "^1.7.2",
+    "vue": "^3.4.29",
+    "vue-router": "^4.3.3",
+    "vite": "^5.3.1",
+    "vite-plugin-vue-devtools": "^7.8.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
+  }
 }
