--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/index.js",
+      "src": "/backend/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "src": "/frontend/package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "rewrites": [
@@ -20,7 +17,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/frontend/dist/index.html"
+      "destination": "/index.html"
     }
   ]
 }
