--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
       "destination": "/backend/index.js"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!api).*)",
       "destination": "/frontend/dist/index.html"
     }
   ]
