--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,12 @@
       }
     }
   ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/backend/index.js"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
@@ -20,6 +26,10 @@
     },
     {
       "src": "/(.*)",
+      "dest": "/frontend/dist/$1"
+    },
+    {
+      "src": "/",
       "dest": "/frontend/dist/index.html"
     }
   ]
