--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,10 @@
+// File: vercel.json
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "/backend/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "/frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/backend/index.js"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/backend/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/dist/$1"
-    },
-    {
-      "src": "/",
-      "dest": "/frontend/dist/index.html"
-    }
-  ]
+"version": 2,
+"rewrites": [
+{
+"source": "/api/:path*",
+"destination": "/backend/index.js"
+}
+]
 }
