--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,22 @@
-// File: vercel.json
 {
-"version": 2,
-"rewrites": [
-{
-"source": "/api/:path*",
-"destination": "/backend/index.js"
-}
-]
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "backend/index.js"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
