--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,19 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3",
-    "vite": "^5.3.1",
-    "vite-plugin-vue-devtools": "^7.3.6"
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.3.1",
+    "vite-plugin-vue-devtools": "^7.3.6"
   }
 }
