--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
-
 {
-"version": 2,
-"rewrites": [
-{
-"source": "/api/:path*",
-"destination": "/backend/index.js"
-}
-]
+  "version": 2,
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/backend/index.js"
+    }
+  ]
 }
