--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+"version": 2,
+"rewrites": [
+{
+"source": "/api/:path*",
+"destination": "/backend/index.js"
+}
+]
 }
