--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,23 @@
 {
-"version": 2,
-"rewrites": [
-{
-"source": "/api/:path*",
-"destination": "/backend/index.js"
-}
-]
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/backend/index.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
