--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,27 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.10.0",
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "axios": "^1.7.2",
+    "vue": "^3.4.29",
+    "vue-router": "^4.3.3",
+    "vite": "^5.3.1",
+    "vite-plugin-vue-devtools": "^7.3.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@vitejs/plugin-vue": "^6.0.0",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.29.0",
-    "eslint-plugin-vue": "~10.2.0",
-    "globals": "^16.2.0",
-    "postcss": "^8.5.6",
-    "prettier": "3.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^7.7.7"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
