--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
+  "name": "portfolio-project",
+  "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "frontend",
-    "backend"
-  ]
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "@vercel/postgres": "^0.9.0",
+    "vue": "^3.4.29",
+    "vue-router": "^4.3.3",
+    "vite": "^5.3.1",
+    "vite-plugin-vue-devtools": "^7.3.6"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "nodemon": "^3.1.4"
+  }
 }
