--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
-    }
+  "name": "portfolio-project",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "dependencies": {
+    "@vercel/postgres": "^0.9.0",
+    "vue": "^3.4.29"
+  }
 }
