--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
-  "name": "portfolio-project",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+  "version": 2,
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
   },
-  "dependencies": {
-    "@vercel/postgres": "^0.9.0",
-    "vue": "^3.4.29"
-  }
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
