--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
       "dest": "backend/index.js"
     },
     {
+      "src": "/images/(.*)",
+      "dest": "backend/index.js"
+    },
+    {
       "handle": "filesystem"
     },
     {
